--- a/app/src/main/res/layout/activity_movies.xml
+++ b/app/src/main/res/layout/activity_movies.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
+            app:movies_items="@{viewmodel.items}"
             android:clipToPadding="false" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
